--- a/notebooks/conjuntos.ipynb
+++ b/notebooks/conjuntos.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "## Operaciones sobre conjuntos\n",
     "\n",
-    "`sets` soportan las operaciones matemáticas sobre conjuntos con oeradores de expresión.\n",
+    "`sets` soportan las operaciones matemáticas sobre conjuntos con operadores de expresión.\n",
     "\n",
     "No pueden realizarse las siguientes operaciones en secuencias como `strings`, `lists`, and `tuples`."
    ]
